--- a/App/package.json
+++ b/App/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.2",
+    "multer": "^1.4.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
