--- a/App/package.json
+++ b/App/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/JacksonRolando/CivilRightsOnlineArchive#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jquery": "^3.6.0",
+    "jsdom": "^16.5.1",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "path": "^0.12.7"
