--- a/App/package.json
+++ b/App/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JacksonRolando/CivilRightsOnlineArchive#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "ejs": "^3.1.6",
