--- a/App/package.json
+++ b/App/package.json
@@ -4,14 +4,14 @@
   "description": "A place to inform people of the current Civil Rights movement",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "nodemon app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/JacksonRolando/CivilRightsOnlineArchive.git"
   },
   "author": "Jackson Rolando and Sam Keyser",
-  "license": "ISC",
+  "license":     "ISC",
   "bugs": {
     "url": "https://github.com/JacksonRolando/CivilRightsOnlineArchive/issues"
   },
