--- a/App/package.json
+++ b/App/package.json
@@ -4,14 +4,14 @@
   "description": "A place to inform people of the current Civil Rights movement",
   "main": "app.js",
   "scripts": {
-    "start" : "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/JacksonRolando/CivilRightsOnlineArchive.git"
   },
   "author": "Jackson Rolando and Sam Keyser",
-  "license":     "ISC",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/JacksonRolando/CivilRightsOnlineArchive/issues"
   },
@@ -27,7 +27,8 @@
     "jsdom": "^16.5.1",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "w3": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
